# Quant-on-Crypto

./: .cspell.json  .gitignore  .repomixignore  .ruff.toml  1.py  404.html  README.md  Strategy.py  backtest.py  data_preprocess.py  download.py  fetch.py  index.html  logger.py  main.py  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml  strategy_DOGE.ipynb  strategy_DOGE_0.ipynb  timeline.py  visualize.py
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.config/direnv/: 90-custom.sh
assets/javascripts/: bundle.13a4f30d.min.js  bundle.56ea9cef.min.js
config/: example.yaml  full_data_example.yaml
data/1m_klines/: BONK_klines_1m.csv  BTC_klines_1m.csv  DOGE_klines_1m.csv  PEPE_klines_1m.csv  SHIB_klines_1m.csv  TRUMP_klines_1m.csv
data/5m_klines/: AAVE_klines_5m.csv  ADA_klines_5m.csv  AVAX_klines_5m.csv  BONK_klines_5m.csv  BTC_klines_5m.csv  DOGE_klines_5m.csv  ETH_klines_5m.csv  LINK_klines_5m.csv  NOT_klines_5m.csv  ORDI_klines_5m.csv  PEPE_klines_5m.csv  SHIB_klines_5m.csv  SOL_klines_5m.csv  SUI_klines_5m.csv  TRUMP_klines_5m.csv  TRX_klines_5m.csv  WIF_klines_5m.csv  XLM_klines_5m.csv  XRP_klines_5m.csv
data/5m_klines_merged/: TRUMP_klines_5m.csv
data/5m_klines_n/: HMSTR_klines_5m.csv  ORDI_klines_5m.csv  PEOPLE_klines_5m.csv  PNUT_klines_5m.csv  TURBO_klines_5m.csv
deploy/rev/: main.py
deploy/rev-usds/: main.py
deploy/stat_arbi/: main.py
deploy/stat_arbi/plots/: main.py
deploy/trend/: main.py  main_doge.py
design/: index.html
docs/: design.md
examples/grid-strategy/: main.py  offline.py  offline_fetch.py  research.ipynb  strategy.ipynb
examples/market-data/: main.py
examples/mmpair-strategy/: research.ipynb  strategy.ipynb
examples/rev-strategy/: main.py  offline_fetch.py  strategy.ipynb
examples/rev-usds/: main.py  main_wplot.py
examples/stat_arbi-usds/: analysis.ipynb  lgbm_model_rct.pkl  main copy.py  main.py  main_baseline.py  main_lgbm.py  main_rdft.py  main_rdft_.py  main_rdft_old.py  main_rdft_temp.py  random_forest_model_rct.pkl
examples/thirdpartydata-strategy/: research.ipynb
examples/trend-usds/: main.py  main_doge copy.py  main_doge.py  main_doge_v2.py
examples/trend_strategy/: research.ipynb  strategy.ipynb
examples/tz-strategy/: strategy.ipynb
output/: asset_values.csv  capital.csv  log.txt  position_values.csv  values.csv
output/features/: all_coins_beta.csv  all_coins_price.csv  all_coins_residual.csv  all_coins_std.csv
output/用所选项目新建的文件夹/: capital_副本.csv  log_副本.txt  position_values_副本.csv  values_副本.csv
reference/qoc/: index.html
reference/qoc/api/: index.html
reference/qoc/api/binance/: index.html
reference/qoc/api/offline/: index.html
reference/qoc/api/typing/: index.html
reference/qoc/api/utils/: index.html
reference/qoc/backtest/: index.html
reference/qoc/balance/: index.html
reference/qoc/database/: index.html
reference/qoc/error/: index.html
reference/qoc/feature/: index.html
reference/qoc/market/: index.html
reference/qoc/preprocess/: index.html
reference/qoc/strategy/: index.html
reference/qoc/struct/: index.html
reference/qoc/struct/typed/: index.html
reference/qoc/time_utils/: index.html
reference/qoc/time_utils/clock/: index.html
reference/qoc/timeline/: index.html
reference/qoc/trade/: index.html
reference/qoc/trade/binance/: index.html
reference/qoc/utils/: index.html
reference/qoc/visualize/: index.html
scripts/: fetch.py  hello-binance.py  main.py
search/: search_index.json
src/qoc/: __init__.pyi
src/qoc/api/: __init__.pyi  _abc.py
src/qoc/api/binance/: __init__.pyi  _account.py  _exchange_info.py  _filters.py  _main.py  _trading.py  _typed.py  _typing.py  _utils.py
src/qoc/api/offline/: __init__.pyi  _klines.py  _offline.py  _offline_old.py
src/qoc/api/typing/: __init__.pyi  _account.py  _base_model.py  _enum.py  _exchange_info.py  _filters.py  _market_data.py  _misc.py  _trading.py
src/qoc/backtest/: __init__.pyi  _backtest.py
src/qoc/balance/: __init__.pyi  _balance.py
src/qoc/database/: __init__.pyi  _database.py  _library.py  _types.py
src/qoc/error/: __init__.pyi  _base.py
src/qoc/feature/: __init__.pyi  _abc.py  _feature_store.py  _price.py
src/qoc/logging/: __init__.pyi  _init.py
src/qoc/market/: __init__.pyi  _futures_usds.py  _market.py  _spot.py
src/qoc/preprocess/: __init__.pyi
src/qoc/research/: _research.py
src/qoc/strategy/: __init__.pyi  _abc.py  _base.py  _persistable.py  _stat_arbitrage.py
src/qoc/struct/: __init__.pyi  _state.py  _time_frame.py  _time_index.py  _time_series.py  _timeline.py  typed.py
src/qoc/time_utils/: __init__.pyi  _clock.py  _datetime.py  _interval.py  _timestamp.py  _unit.py
src/qoc/timeline/: __init__.pyi  _base.py  _stat_arbitrage.py
src/qoc/trade/: __init__.pyi  _abc.py
src/qoc/typing/: __init__.pyi  _misc.py
src/qoc/utils/: __init__.pyi  _app_env.py  _clock.py  _enum.py  _parse.py  _path.py  _polars.py
src/qoc/visualize/: __init__.pyi
strategies/arbi-strategy/: research.ipynb
strategies/grid-strategy/: main.py  plot.py
strategies/growthepie/: corr.ipynb  corr.py
strategies/mmpair-strategy/: arbi_research.ipynb  arbi_research_v2.ipynb  arbi_research_v3.ipynb  arbi_research_v3_.ipynb  arbi_research_v4.ipynb  lgbm.ipynb  offline_fetch.py  random_forest_model_2.pkl  research.ipynb  research_0103.ipynb  research_baseline.ipynb  research_rdft.ipynb  stra_research copy 2.ipynb  stra_research copy 3.ipynb  stra_research copy.ipynb  stra_research.ipynb  stra_research_.ipynb  stra_research_ml.ipynb  strategy.ipynb  temp.py  test.ipynb
strategies/rev-strategy/: main.py  offline_fetch.py  research.ipynb  strategy.ipynb
strategies/trend-strategy/: research.ipynb  strategy.ipynb  strategy_BTC.ipynb  strategy_DOGE.ipynb  strategy_DOGE_0.ipynb  strategy_ETH.ipynb  union.ipynb
strategies/trend_strategy/: main.py  offline_fetch.py  strategy.ipynb
strategies/tz-strategy/: research.ipynb  strategy.ipynb
strategies/union-strategies/: strategies.ipynb
(+62 files in other folders)
