#:schema https://json.schemastore.org/pyproject.json
# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "quant-on-crypto"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "RockyLiii", email = "93507477+RockyLiii@users.noreply.github.com" },
]
keywords = []
classifiers = [
  # ref: <https://pypi.org/classifiers/>
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Investment",
  "Typing :: Typed",
]
dependencies = [
  "arcticdb>=6,<7",
  "binance-connector>=3,<4",
  "jaxtyping>=0.3,<0.4",
  "lazy-loader>=0.4,<0.5",
  "liblaf-cherries>=0.4.1",
  "liblaf-grapes>=2,<3",
  "loguru>=0.7,<0.8",
  "matplotlib>=3,<4",
  "numpy>=2,<3",
  "pandas>=2,<3",
  "polars[pyarrow]>=1,<2",
  "pyyaml>=6,<7",
  "requests>=2,<3",
  "scikit-learn>=1,<2",
  "scipy>=1,<2",
  "seaborn>=0.13,<0.14",
  "torch>=2,<3",
  "tqdm>=4,<5",
]
dynamic = ["version"]

[project.urls]
"Changelog" = "https://github.com/liblaf/Quant-on-Crypto/blob/main/CHANGELOG.md"
"Documentation" = "https://liblaf.github.io/Quant-on-Crypto/"
"Funding" = "https://github.com/liblaf/Quant-on-Crypto?sponsor=1"
"Homepage" = "https://github.com/liblaf/Quant-on-Crypto"
"Issue Tracker" = "https://github.com/liblaf/Quant-on-Crypto/issues"
"Release Notes" = "https://github.com/liblaf/Quant-on-Crypto/releases"
"Source Code" = "https://github.com/liblaf/Quant-on-Crypto"

[dependency-groups]
build = ["check-wheel-contents>=0.6,<0.7", "hatch>=1,<2", "twine>=6,<7"]
dev = ["icecream>=2,<3"]
docs = ["liblaf-mkdocs-preset>=0.2,<0.3", "mkdocs>=1,<2"]
test = ["liblaf-pytest-preset>=0.1,<0.2", "pytest>=8,<9"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/qoc/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/qoc"]

[tool.hatch.version]
source = "vcs"

[tool.pyright]
extends = ".config/linters/pyrightconfig.json"

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--hypothesis-show-statistics",
  "--import-mode=importlib",
  "--showlocals",
  "--strict-config",
  "--strict-markers",
]
testpaths = ["benches", "src", "tests"]

[tool.ruff]
extend = ".config/linters/.ruff.toml"

[tool.ruff.lint]
ignore = ["F722", "N803"]

[tool.uv]
default-groups = "all"
